feat: add sso credential exchange
